--- a/ticket.html
+++ b/ticket.html
@@ -6,12 +6,15 @@
 
 <style>
   body {margin: 0; padding: 0;}
+  .responsive {width: 100%; height: auto;}
 </style>
 
 </head>
 
 <body>
-  <img src="ticket.png" alt="ticket" width="375px">
+  <div class="container">
+    <img src="ticket.png" alt="ticket" class="responsive">
+  </div>
 </body>
 
 </html>
